--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -1,23 +1,59 @@
 name: Automatisation des tests DevSecOps
+
 on: push
+
 jobs:
   Dependances:
     runs-on: ubuntu-latest
     steps:
-      - name: Dependances
+      - name: Récupération du code
+        uses: actions/checkout@v4
+
+      - name: Installation de Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Contrôle du fichier requirements.txt
         run: |
-          echo "ecrire ici le scrypt de contrôle des dépendances"
+          if [ -f requirements.txt ]; then
+            echo "✅ Le fichier requirements.txt existe."
+            pip install --upgrade pip
+            pip install -r requirements.txt
+            echo "✅ Les dépendances ont été installées avec succès."
+          else
+            echo "❌ Le fichier requirements.txt est manquant."
+            exit 1
+          fi
+
+      - name: Analyse de sécurité des dépendances (optionnel)
+        run: |
+          pip install safety
+          echo "🔍 Analyse des dépendances..."
+          safety check -r requirements.txt || true
+
   Dockerfile:
     runs-on: ubuntu-latest
     needs: Dependances
     steps:
-      - name: Test Dockerfile
+      - name: Récupération du code
+        uses: actions/checkout@v4
+
+      - name: Contrôle du Dockerfile
         run: |
-          echo "ecrire ici le scrypt de contrôle du Dockerfile"
+          if [ -f Dockerfile ]; then
+            echo "✅ Le fichier Dockerfile existe."
+            docker build -t breakableflask-test .
+            echo "✅ Le Dockerfile est valide et l'image s'est construite avec succès."
+          else
+            echo "❌ Le fichier Dockerfile est manquant."
+            exit 1
+          fi
+
   Deploy:
     runs-on: ubuntu-latest
     needs: Dockerfile
     steps:
       - name: Deploy
         run: |
-          echo "Rien à faire ici. Votre application est prête à être déployée"
+          echo "🚀 Rien à faire ici. Votre application est prête à être déployée."
